--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" href="index.css">
-<script src="index.js"></script>
+<script defer src="index.js"></script>
 <h1>Testes com Github Pages</h1>
 <p></p>
