--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <section>
                 <div class="bl-box bl-icon-gustavo">
                     <img class src="img/bragus.jpg" alt="Gustavo Braga">
-                    <h2 class="bl-icon bl-icon-gustavo">Gustavo Braga</h2>
+                    <h2 class="bl-icon-gus bl-icon-gustavo">Gustavo Braga</h2>
                 </div>
                 <div class="bl-content">
+                    <img class="guscontent" src="img/bragus.jpg" alt="Gustavo Braga">
                     <h2>Gustavo Braga</h2>
                     <p>19 <br>
                         Front-end developer <br>
@@ -25,6 +26,7 @@
                     <a href="https://github.com/bragus"><img src="" alt="github"></a>
                     <a href="https://www.linkedin.com/in/gustavobrag/"><img src="" alt="linkedin"></a>
                 </div>
+
                 <span class="bl-icon bl-icon-close"></span>
             </section>
             <section id="bl-work-section">
@@ -97,9 +99,3 @@
     </script>
 </body>
 </html>
-=======
-<link rel="stylesheet" href="index.css">
-<script defer src="index.js"></script>
-<h1>Testes com Github Pages</h1>
-<p></p>
->>>>>>> 097620ab6d087513a1049de7842b5c98800ae881
