--- a/index.html
+++ b/index.html
@@ -14,17 +14,23 @@
         <div id="bl-main" class="bl-main">
             <section>
                 <div class="bl-box bl-icon-gustavo">
-                    <img class src="img/bragus.jpg" alt="Gustavo Braga">
-                    <h2 class="bl-icon-gus bl-icon-gustavo">Gustavo Braga</h2>
+                        <h2 class="bl-icon-gus bl-icon-gustavo">
+                            <img class src="img/bragus.jpg" alt="Gustavo Braga"> <br> <br> <br> <br>
+                            Gustavo Braga</h2>
                 </div>
                 <div class="bl-content">
-                    <img class="guscontent" src="img/bragus.jpg" alt="Gustavo Braga">
-                    <h2>Gustavo Braga</h2>
-                    <p>19 <br>
-                        Front-end developer <br>
-                    </p>
-                    <a href="https://github.com/bragus"><img src="" alt="github"></a>
-                    <a href="https://www.linkedin.com/in/gustavobrag/"><img src="" alt="linkedin"></a>
+                    <div class="profile">
+                        <img class="guscontent" src="img/bragus.jpg" alt="Gustavo Braga">
+                        <h2>Gustavo Braga</h2>
+                        <p><img src="img/age.png">  19 </p>
+                        <p><img src="img/dev.png">  Front-end developer</p>
+                        <p><img src="img/mail.png">  gusalmeidabraga@gmail.com </p>
+                        <a href="https://github.com/bragus"><img src="img/github.png" alt="github"></a>
+                        <a href="https://www.linkedin.com/in/gustavobrag/"><img src="img/linkedin.png" alt="linkedin"></a>
+                    </div>
+                    <div class="vitae">
+
+                    </div>
                 </div>
 
                 <span class="bl-icon bl-icon-close"></span>
