começando página works

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <img class src="img/bragus.jpg" alt="Gustavo Braga"> <br> <br> <br> <br>
                             Gustavo Braga</h2>
                 </div>
-                <div class="bl-content">
+                <div class="bl-content bl-content-profile">
                     <div class="profile">
                         <img class="guscontent" src="img/bragus.jpg" alt="Gustavo Braga">
                         <h2>Gustavo Braga</h2>
@@ -45,9 +45,10 @@
                     <h2>My Works</h2>
                     <p>Own projects and design projects</p>
                     <ul id="bl-work-items">
-                        <li data-panel="panel-1"><a href="#"><img src="" alt="demoarcade"></a></li>
-                        <li data-panel="panel-2"><a href="#"><img src="" alt="orlando braga"></a></li>
-                        <li data-panel="panel-3"><a href="#"><img src="" alt="design projects"></a></li>
+                        <li data-panel="panel-1"><a href="#"><img id="demoarcade" src="img/darcade.png" alt="demoarcade"></a></li>
+                        <li data-panel="panel-2"><a href="#"><img id="obraga" src="img/obraga.png" alt="orlando braga"></a></li>
+                        <li data-panel="panel-2"><a href="#"><img id="obraga" src="img/design.png" alt="orlando braga"></a></li>
+                    
                     </ul>
                 </div>
                 <span class="bl-icon bl-icon-close"></span>
@@ -70,8 +71,8 @@
             <div class="bl-panel-items" id="bl-panel-work-items">
                 <div data-panel="panel-1">
                     <div>
-                        <img src="images/demoarcade.jpg" alt="demoarcade">
-                        <h3>demoarade</h3>
+                        <img src="img//demoarcade.png" alt="demoarcade">
+
                         <p>demoarcade description</p>
                         <a href="#"><img src="" alt="demoarcade github"></a>
                         <a href="#"><img src="" alt="demoarcade link"></a>
@@ -92,7 +93,7 @@
                     </div>
                 </div>
                 <nav>
-                    <span class="bl-net-work">&gt; Next</span>
+                    <span class="bl-next-work">&gt; Next</span>
                     <span class="bl-icon bl-icon-close"></span>
                 </nav>
             </div>
