finalizando página orlando braga

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <p><img src="img/icons/age.png">  19 </p>
                         <p><img src="img/icons/dev.png">  Front-end developer</p>
                         <p><img src="img/icons/mail.png">  gusalmeidabraga@gmail.com </p>
-                        <a href="https://github.com/bragus"><img src="img/icons/github.png" alt="github"></a>
-                        <a href="https://www.linkedin.com/in/gustavobrag/"><img src="img/icons/linkedin.png" alt="linkedin"></a>
+                        <a href="https://github.com/bragus" target="_blank"><img src="img/icons/github.png" alt="github"></a>
+                        <a href="https://www.linkedin.com/in/gustavobrag/" target="_blank"><img src="img/icons/linkedin.png" alt="linkedin"></a>
                     </div>
                     <div class="vitae">
                         <p>aaaaaaaaaaaaaaaaaaaaaaaaaa <br>
@@ -74,8 +74,8 @@
                         <div>
                             <img src="img/works/demoarcade.png" alt="demoarcade">
                             <div>
-                                <a href="https://github.com/bragus/demoarcade"><img src="img/icons/githubwhite.png" alt="demoarcade github"></a>
-                                <a href="https://demoarcade.herokuapp.com/"><img src="img/icons/goiconwhite.png" alt="demoarcade link"></a>
+                                <a href="https://github.com/bragus/demoarcade" target="_blank"><img src="img/icons/githubwhite.png" alt="demoarcade github"></a>
+                                <a href="https://demoarcade.herokuapp.com/" target="_blank"><img src="img/icons/goiconwhite.png" alt="demoarcade link"></a>
                             </div>
                         </div>
                         <p>Demoarcade is a project from Mastertech Academy.<br> <br>
@@ -83,13 +83,18 @@
                         <h2>Screenshots:</h2>
                         <img src="img\works\dprint.png" alt="Print screen demoarcade">
                     </div>
-
                 </div>
-                <div data-panel="panel-2">
-                    <div>
-                        <img src="img/works/orlandobraga.jpg" alt="orlando braga">
-                        <h3>orlando braga</h3>
-                        <a href="#"><img src="" alt="orlandobraga link"></a>
+                <div id="panel" data-panel="panel-2">
+                    <div id="column-1">
+                        <div>
+                            <img id="imgobraga" src="img/works/orlandobraga.png" alt="orlando braga">
+                            <div>
+                                <a href="https://orlandobraga.com.br" target="_blank"><img src="img/icons/goiconwhite.png" alt="orlando braga link"></a>
+                            </div>
+                        </div>
+                        <p>Website for a house repair company.<br> <br>
+                        <h2>Screenshots:</h2>
+                        <img src="img\works\obprint.png" alt="Print screen Orlando Braga">
                     </div>
                 </div>
                 <div data-panel="panel-3">
