finalizando página bramax e more works

--- a/index.html
+++ b/index.html
@@ -97,18 +97,30 @@
                         <img src="img\works\obprint.png" alt="Print screen Orlando Braga">
                     </div>
                 </div>
-                <div data-panel="panel-3">
-                    <div>
-                        <img src="" alt="bramax">
-                        <img src="" alt="djpiu">
-                        <h3>freela designs</h3>
+                <div id="panel" data-panel="panel-3">
+                    <div id="column-1">
+                        <div>
+                            <img id="imgbramax" src="img/works/bramax.png" alt="bramax embutidos e defumados">
+                            <div>
+                                <a href="https://www.facebook.com/bramax.defumados/" target="_blank"><img src="img/icons/facebookicon.png" alt="Facebook Bramax"></a>
+                                <a href="https://www.instagram.com/bramax_defumados/" target="_blank"><img src="img/icons/instagramicon.png" alt="Instagram Bramax"></a>
+                            </div>
+                        </div>
+                        <p>Design project for food company.<br> <br>
+                        <h2>Images:</h2>
+                        <img id="bimg" src="img/works/avatar fb.jpg" alt="">
+                        <img id="bimg" src="img/works/bramaxlogo.jpg" alt="">
+                        <img id="bimg" src="img/works/cabafbfinal.jpg" alt="">
+                        <img id="bimg" src="img/works/cartão de visita.jpg" alt="">
                     </div>
                 </div>
-                <div data-panel="panel-4">
+                <div id="panel" data-panel="panel-4">
                     <div>
-                        <img src="" alt="bramax">
-                        <img src="" alt="djpiu">
-                        <h3>freelaaaaa</h3>
+                        <h2>More works</h2>
+                        <div>
+                        <img id="imgdjpiu" src="img/works/djpiu.png" alt="Imagem spotify">
+                        <p>Spotify job for Dj Piu and Mc Levin</p>
+                        </div>
                     </div>
                 </div>
                 <nav>
