finalizando página perfil

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -23,15 +23,15 @@
                         <img class="guscontent" src="img/bragus.jpg" alt="Gustavo Braga">
                         <h2>Gustavo Braga</h2>
                         <p><img src="img/icons/age.png">  19 </p>
-                        <p><img src="img/icons/dev.png">  Front-end developer</p>
-                        <p><img src="img/icons/mail.png">  gusalmeidabraga@gmail.com </p>
-                        <a href="https://github.com/bragus" target="_blank"><img src="img/icons/github.png" alt="github"></a>
-                        <a href="https://www.linkedin.com/in/gustavobrag/" target="_blank"><img src="img/icons/linkedin.png" alt="linkedin"></a>
+                        <p><img src="img/icons/dev.png">  Desenvolvedor front-end</p>
+                        <p><img src="img/icons/local.png" alt=""> São Paulo - SP</p>
                     </div>
                     <div class="vitae">
-                        <p>aaaaaaaaaaaaaaaaaaaaaaaaaa <br>
-                        aaaaaaaaaaaaaaaaaaaaaaaaaa <br>
-                    <br></p>
+                        <h2>Sobre mim</h2>
+                        <p>Desenvolvedor front-end formado pela academia Mastertech. <br>
+                        Cursando análise e desenvolvimento de sistemas na Fatec Zona Sul. <br>
+                        Além do trabalho como designer gráfico, trabalho como jovem aprendiz na área de marketing da AVON.
+                        </p>
                     </div>
                 </div>
 
@@ -39,11 +39,11 @@
             </section>
             <section id="bl-work-section">
                 <div class="bl-box">
-                    <h2 class="bl-icon bl-icon-works">Works</h2>
+                    <h2 class="bl-icon bl-icon-works">Portfolio</h2>
                 </div>
                 <div class="bl-content">
-                    <h2>My Works</h2>
-                    <p>Own projects and design projects</p>
+                    <h2>Portfolio</h2>
+                    <p>Trabalhos de design e web design:</p>
                     <ul id="bl-work-items">
                         <li data-panel="panel-1"><a href="#"><img id="panel-items" src="img/works/darcade.png" alt="demoarcade"></a></li>
                         <li data-panel="panel-2"><a href="#"><img id="panel-items" src="img/works/obraga.png" alt="orlando braga"></a></li>
@@ -55,15 +55,10 @@
             </section>
             <section>
                 <div class="bl-box">
-                    <h2 class="bl-icon bl-icon-contact">Contact</h2>
+                    <h2 class="bl-icon bl-icon-contact">Contato</h2>
                 </div>
                 <div class="bl-content">
-                    <h2>Contato contato contato</h2>
-                    <p>listar aqui meios de contato <br> 
-                        email <br>
-                        linkedin <br>
-                        whatsapp <br>
-                    </p>
+
                 </div>
                 <span class="bl-icon bl-icon-close"></span>
             </section>
@@ -78,8 +73,8 @@
                                 <a href="https://demoarcade.herokuapp.com/" target="_blank"><img src="img/icons/goiconwhite.png" alt="demoarcade link"></a>
                             </div>
                         </div>
-                        <p>Demoarcade is a project from Mastertech Academy.<br> <br>
-                        A simple asteroid game created using JavaScript and Django. <br></p>
+                        <p>Demoarcade foi um projeto da academia Mastertech.<br> <br>
+                        Um jogo de asteroide simples criado usando JavaScript e Django.<br></p>
                         <h2>Screenshots:</h2>
                         <img src="img\works\dprint.png" alt="Print screen demoarcade">
                     </div>
@@ -92,7 +87,7 @@
                                 <a href="https://orlandobraga.com.br" target="_blank"><img src="img/icons/goiconwhite.png" alt="orlando braga link"></a>
                             </div>
                         </div>
-                        <p>Website for a house repair company.<br> <br>
+                        <p>Website criado para uma empresa de manutenção.<br> <br>
                         <h2>Screenshots:</h2>
                         <img src="img\works\obprint.png" alt="Print screen Orlando Braga">
                     </div>
@@ -106,8 +101,8 @@
                                 <a href="https://www.instagram.com/bramax_defumados/" target="_blank"><img src="img/icons/instagramicon.png" alt="Instagram Bramax"></a>
                             </div>
                         </div>
-                        <p>Design project for food company.<br> <br>
-                        <h2>Images:</h2>
+                        <p>Projeto de design para uma empresa de embutidos artesanais.<br> <br>
+                        <h2>Imagens:</h2>
                         <img id="bimg" src="img/works/avatar fb.jpg" alt="">
                         <img id="bimg" src="img/works/bramaxlogo.jpg" alt="">
                         <img id="bimg" src="img/works/cabafbfinal.jpg" alt="">
@@ -116,15 +111,15 @@
                 </div>
                 <div id="panel" data-panel="panel-4">
                     <div>
-                        <h2>More works</h2>
+                        <h2>Mais trabalhos:</h2>
                         <div>
                         <img id="imgdjpiu" src="img/works/djpiu.png" alt="Imagem spotify">
-                        <p>Spotify job for Dj Piu and Mc Levin</p>
+                        <p>Capa para Spotify</p>
                         </div>
                     </div>
                 </div>
                 <nav>
-                    <span class="bl-next-work">&gt; Next</span>
+                    <span class="bl-next-work">&gt; Próximo</span>
                     <span class="bl-icon bl-icon-close"></span>
                 </nav>
             </div>
