--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
                     <h2 class="bl-icon bl-icon-contact">Contato</h2>
                 </div>
                 <div class="bl-content">
-
+                    <h2>Contato</h2>
+                    <a href="https://www.linkedin.com/in/gustavobrag/"><img src="img/icons/linkedin.png" ></a>
+                    <a href="https://github.com/bragus"><img src="img/icons/github.png" ></a>
+                    <p>Entre contato também através do meu e-mail:
+                    <a href="mailto:gusalmeidabraga@gmail.com">gusalmeidabraga@gmail.com</a> </p>
                 </div>
                 <span class="bl-icon bl-icon-close"></span>
             </section>
