--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-laptop-medical fa-stack-1x fa-inverse"></i></span>
                     <h4 class="my-3">T.I.</h4>
-                    <p class="text-muted-li">Serviços de IT presenciais e a distância.</p>
+                    <p class="text-muted-li">Serviços de TI presenciais e a distância.</p>
                 </div>
             </div>
         </div>
