--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="text-center contatotexto">
                 <h2 class="section-heading text-uppercase">Entre em contato</h2>
-                <h3 class="section-subheading text-muted-da"><a class="section-subheading text-muted " href="mailto:gusalmeidabraga@gmail.com">gusalmeidabraga@gmail.com</a></h3>
+                <h3 class="section-subheading text-muted-da"><a class="section-subheading text-muted " href="mailto:guscreatecontato@gmail.com">guscreatecontato@gmail.com</a></h3>
                 <span class="section-heading text-uppercase redes">Redes sociais</span>
                 <a class="btn btn-dark btn-social" href="https://github.com/bragus" target="_blank"><i class="fab fa-github"></i></a><a class="btn btn-dark btn-social" href="https://www.instagram.com/gus.create/" target="_blank"><i class="fab fa-instagram"></i></a><a class="btn btn-dark btn-social" href="https://www.linkedin.com/in/gustavobrag/" target="_blank"><i class="fab fa-linkedin-in"></i></a><a class="btn btn-dark btn-social" href="https://twitter.com/guscreate" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
