--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gus.create</title>
+    <title>gus.create - Web Design</title>
+    <meta name="application-name" content="gus.create - Web Design" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <script src="js/all.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <meta property="og:locale" content="pt_BR" />
+    <meta name="description" content="Criação de sites, templates, logos e design gráfico em geral." />
+    <meta property="og:title" content="gus.create - Web Design" />
+    <meta property="og:type" content="business" />
+    <meta property="og:url" content="https://orlandobraga.com.br/" />
+    <meta property="og:site_name" content="gus.create - Web Design" />
+    <meta property="og:description" content="Criação de sites, templates, logos e design gráfico em geral." />
 </head>
 <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
