--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>gus.create - Web Design</title>
     <meta name="application-name" content="gus.create - Web Design" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <script src="js/all.js" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:locale" content="pt_BR" />
     <meta name="description" content="Criação de sites, templates, logos e design gráfico em geral." />
     <meta property="og:title" content="gus.create - Web Design" />
     <meta property="og:type" content="business" />
-    <meta property="og:url" content="https://orlandobraga.com.br/" />
+    <meta property="og:url" content="http://www.guscreate.com/" />
     <meta property="og:site_name" content="gus.create - Web Design" />
     <meta property="og:description" content="Criação de sites, templates, logos e design gráfico em geral." />
 </head>
