--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>gus.create - Web Design</title>
     <meta name="application-name" content="gus.create - Web Design" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <script src="js/all.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:locale" content="pt_BR" />
